add header css code

--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -1,10 +1,6 @@
-body {
-    padding-top: 50px
-}
-
 
 .navbar-brand {
-    padding: 13.5px 15px 12.5px
+    padding: 13.5px 15px
 }
 
 .navbar-brand > img {
