--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -11,6 +11,8 @@
 
 .navbar-subtitle {
     margin: 0px 10px;
+    padding-top: 19.5px;
+    padding-bottom: 19.5px;
     float: left;
     border-left: 2px solid #2c3038;
     color: #ffffff;
