--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -6,7 +6,18 @@
 .navbar-brand > img {
     display: inline;
     margin: 0 10px;
-    height: 100%
+    height: 100%;
+    font-size: 20px;
+}
+
+.navbar-line {
+    margin: 0px 10px;
+    padding-top: 19.5px;
+    padding-bottom: 19.5px;
+    float: left;
+    width: 1px;
+    border: 1px solid #ffffff;
+    height: 50px;
 }
 
 .navbar-subtitle {
@@ -15,6 +26,7 @@
     padding-bottom: 19.5px;
     float: left;
     color: #ffffff;
+    font-size: 16px;
 }
 
 #sayhello {
