--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -7,24 +7,17 @@
     display: inline;
     margin: 0 10px;
     height: 100%;
-    font-size: 20px;
-}
-
-.navbar-brand > span {
-    display: inline;
-    margin: 0 10px;
-    float: left;
-    height: 100%;
     line-height: 100%;
     font-size: 20px;
 }
 
 .navbar-line {
-    margin: 0px 10px;
+    margin: 10px 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     float: left;
     width: 1px;
     border: 1px solid #ffffff;
-    height: 10px;
 }
 
 .navbar-subtitle {
