--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -6,17 +6,17 @@
 .navbar-brand > img {
     display: inline;
     margin: 0 10px;
-    height: 100%;
-    line-height: 100%;
+    height: 60px;
     font-size: 20px;
 }
 
 .navbar-line {
-    margin: 10px 10px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    margin: 20px 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     float: left;
     width: 1px;
+    height: 60px;
     border: 1px solid #ffffff;
 }
 
