--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -6,7 +6,7 @@
 .navbar-brand > img {
     display: inline;
     margin: 0 10px;
-    height: 60px;
+    height: 100%;
     font-size: 20px;
 }
 
@@ -16,7 +16,6 @@
     padding-bottom: 10px;
     float: left;
     width: 1px;
-    height: 60px;
     border: 1px solid #ffffff;
 }
 
