--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -1,6 +1,8 @@
 
 .navbar-brand {
-    padding: 13.5px 15px
+    /*padding: 13.5px 15px;*/
+    display:block;
+    text-align:center
 }
 
 .navbar-brand > img {
