--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -1,15 +1,15 @@
 
 .navbar-brand {
-    /*padding: 13.5px 15px;*/
+    padding: 12px 15px;
     display:block;
-    text-align:center
+    text-align:center;
+    font-size: 20px;
 }
 
 .navbar-brand > img {
     display: inline;
     margin: 0 10px;
     height: 100%;
-    font-size: 20px;
 }
 
 .navbar-line {
@@ -23,8 +23,8 @@
 
 .navbar-subtitle {
     margin: 0px 10px;
-    padding-top: 19.5px;
-    padding-bottom: 19.5px;
+    padding-top: 19px;
+    padding-bottom: 19px;
     float: left;
     color: #ffffff;
     font-size: 16px;
