--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -19,7 +19,7 @@
     padding-bottom: 10px;
     float: left;
     width: 1px;
-    border: 1px solid #ffffff;
+    border-left: 1px solid #f5f5f5;
 }
 
 .navbar-subtitle {
