--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -19,7 +19,7 @@
     padding-bottom: 10px;
     float: left;
     width: 1px;
-    border-left: 1px solid #f5f5f5;
+    border-left: 1px solid #e6e6e6;
 }
 
 .navbar-subtitle {
@@ -29,10 +29,19 @@
     float: left;
     color: #ffffff;
     font-size: 16px;
-    font-weight: 100;
+    font-weight: 200;
 }
 
-#sayhello {
+.back-to-home {
+    margin: 0px 10px;
+    padding-top: 19.5px;
+    padding-bottom: 19.5px;
+    color: #ffffff;
+    float: left;
+    display: block;
+}
+
+.sayhello {
     margin: 0px 10px;
     padding-top: 19.5px;
     padding-bottom: 19.5px;
