--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -1,81 +1,29 @@
 
 .main-menu {
     width: 1200px;
-    height: 170px;
-    margin-top:50px;
-    margin-left: auto;
-    margin-right: auto;
+    height: 600px;
+    color: #2c3e50;
+}
+
+.main-menu:hover, .main-menu:focus {
+    text-decoration: none;
+    color: #18bc9c;
+    background-color: transparent;
 }
 
 
 .main-menu > li {
-    height: 401px;
-    position: relative;
+    display:block;
+    border: 1px solid #555555;
+    width: 300px;
+    height: 200px;
     text-align: center;
-    width: 25%;
-    padding: 82px 0 94px;
-    float: left;
-    border-bottom: 1px solid #f5f5f5;
-    border-left: 1px solid #f5f5f5;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+    position: relative;
 }
-
 
 .menu-icon {
     display: inline-block;
     width: 78px;
     height: 78px;
-    background-repeat: no-repeat;
-    -webkit-background-size: 78px auto;
-    background-size: 78px auto;
 }
 
-
-.station > div {
-    background-image: url(../../img/home/test.png);
-}
-
-.equipment > div {
-    background-image: url(../../img/home/test.png);
-}
-
-.failure > div {
-    background-image: url(../../img/home/test.png);
-}
-
-.map > div {
-    background-image: url(../../img/home/test.png);
-}
-
-.status > div {
-    background-image: url(../../img/home/test.png);
-}
-
-.station-warning > div {
-    background-image: url(../../img/home/test.png);
-}
-
-.report > div {
-    background-image: url(../../img/home/test.png);
-}
-
-.weather > div {
-    background-image: url(../../img/home/test.png);
-}
-
-.user > div {
-    background-image: url(../../img/home/test.png);
-}
-
-.role > div {
-    background-image: url(../../img/home/test.png);
-}
-
-.permission > div {
-    background-image: url(../../img/home/test.png);
-}
-
-.log > div {
-    background-image: url(../../img/home/test.png);
-}
