--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -5,25 +5,27 @@
     color: #2c3e50;
 }
 
-.main-menu:hover, .main-menu:focus {
+.main-menu >a:hover, .main-menu >a:focus {
     text-decoration: none;
     color: #18bc9c;
     background-color: transparent;
 }
 
 
-.main-menu > li {
+.main-menu > a {
     display:block;
-    border: 1px solid #555555;
+    border: 1px solid #ecf0f1;
     width: 300px;
     height: 200px;
     text-align: center;
     position: relative;
+    float: left;
 }
 
 .menu-icon {
     display: inline-block;
     width: 78px;
     height: 78px;
+    margin-top: 10px;
 }
 
