--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -3,6 +3,7 @@
     width: 1200px;
     height: 600px;
     color: #2c3e50;
+    margin-left: -10px;
 }
 
 .main-menu > li {
@@ -12,6 +13,7 @@
     height: 200px;
     text-align: center;
     float: left;
+    line-height: 100%;
 }
 
 .menu-item {
