--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -2,7 +2,7 @@
 .main-menu {
     width: 100%;
     color: #2c3e50;
-    margin: auto;
+    padding-left: 0px;
 }
 
 .main-menu > li {
@@ -25,7 +25,7 @@
 }
 
 .menu-item >h4 {
-    margin: 0px;
+    margin: auto;
 }
 
 .menu-icon {
