--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -7,7 +7,7 @@
 
 .main-menu > li {
     display:block;
-    borderl: 1px solid #ecf0f1;
+    border: 1px solid #ecf0f1;
     width: 25%;
     text-align: center;
     float: left;
@@ -19,7 +19,7 @@
     width: 100%;
 }
 
-.menu-item:hover,.menu-item:focus {
+.menu-item:hover, .menu-item:focus {
     text-decoration: none;
     color: #18bc9c;
     background-color: transparent;
