--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -1,13 +1,13 @@
 
 .main-menu {
     width: 100%;
-    color: #2c3e50;
     padding-left: 0px;
 }
 
 .main-menu > li {
     display:block;
-    border: 1px solid #ecf0f1;
+    border-left: 1px solid #f5f5f5;
+    border-bottom: 1px solid #f5f5f5;
     width: 25%;
     text-align: center;
     float: left;
@@ -17,6 +17,9 @@
 .menu-item {
     height: 100%;
     width: 100%;
+    color: #2c3e50;
+    margin: 0px;
+    padding: 0px;
 }
 
 .menu-item:hover, .menu-item:focus {
