--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -1,4 +1,8 @@
 
+.panel-body {
+    padding: 0px;
+}
+
 .main-menu {
     width: 100%;
     padding-left: 0px;
@@ -6,8 +10,7 @@
 
 .main-menu > li {
     display:block;
-    border-left: 1px solid #f5f5f5;
-    border-bottom: 1px solid #f5f5f5;
+    border: 1px solid #ecf0f1;
     width: 25%;
     text-align: center;
     float: left;
