--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -1,5 +1,10 @@
 
-.panel-body {
+
+.custom-panel {
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.05);
+}
+
+.custom-panel-body {
     padding: 0px;
 }
 
