--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -24,7 +24,8 @@
 .menu-item {
     color: #2c3e50;
     display:block;
-    width: 25%;
+    width: 100%;
+    height: 100%;
 }
 
 .menu-item:hover, .menu-item:focus {
