--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -28,7 +28,7 @@
     height: 100%;
 }
 
-.menu-item:hover, .menu-item:focus {
+.menu-item:hover {
     text-decoration: none;
     color: #18bc9c;
     cursor: pointer;
