--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -1,7 +1,7 @@
 
 
 .custom-panel {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, .08);
 }
 
 .custom-panel-body {
@@ -44,8 +44,8 @@
 
 .menu-icon {
     display: inline-block;
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
     margin-top: 40px;
 }
 
