--- a/drainage/public/css/station/station.css
+++ b/drainage/public/css/station/station.css
@@ -4,8 +4,13 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .08);
 }
 
+.panel-heading {
+    font-weight: bold;
+    margin-right: 10px;
+}
+
 .panel-heading >a {
     float: right;
-    margin-right: 10px;
+    margin-left: 80%;
 }
 
