--- a/drainage/public/css/station/station.css
+++ b/drainage/public/css/station/station.css
@@ -9,8 +9,7 @@
 }
 
 .panel-heading >a {
-    float: right;
-    padding: 10px 15px;
-    margin: 10px 15px;
+    margin-left:auto;
+    margin-right:2px;
 }
 
