--- a/drainage/public/css/station/station.css
+++ b/drainage/public/css/station/station.css
@@ -4,12 +4,13 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .08);
 }
 
-.panel-heading {
+.panel-heading > span{
     font-weight: bold;
 }
 
 .panel-heading >a {
-    margin-left:auto;
-    margin-right:2px;
+    float: left;
+    margin-left: 80%;
+    margin-right: 0px;
 }
 
