--- a/drainage/public/css/station/station.css
+++ b/drainage/public/css/station/station.css
@@ -4,14 +4,11 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .08);
 }
 
-.panel-heading > span{
+.panel-heading >span {
     font-weight: bold;
-    float: left;
 }
 
-.panel-heading >div {
-    float: right;
-    margin: 10px 0px;
-
+.panel-heading >a {
+    margin-left: 80%;
 }
 
