--- a/drainage/public/css/station/station.css
+++ b/drainage/public/css/station/station.css
@@ -4,11 +4,15 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .08);
 }
 
-.panel-heading {
+.panel-heading .row {
+    line-height: 35px;
+}
+
+.panel-heading .col-title {
     font-weight: bold;
 }
 
-.panel-heading >a {
-    margin-left: 80%;
+.panel-heading .col-btn >a {
+    float: right;
 }
 
