--- a/drainage/public/css/station/station.css
+++ b/drainage/public/css/station/station.css
@@ -12,7 +12,11 @@
     font-weight: bold;
 }
 
-.panel-heading .col-btn >a {
+.panel-heading .col-btn a {
     float: right;
+}
+
+.table th {
+    text-align: center;
 }
 
