--- a/drainage/public/css/station/station.css
+++ b/drainage/public/css/station/station.css
@@ -35,6 +35,7 @@
 
 .pagination {
     float: right;
+    margin: 10px 0px;
 }
 
 .pagination > li > a {
@@ -43,7 +44,11 @@
     border: 1px solid #ecf0f1;
 }
 
-.pagination a:hover, .pagination a:focus{
-    color: #18bc9c;
+.pagination > li > a:hover {
+    color: #ffffff;
+    background-color: #0f7864;
+    border-color: transparent;
 }
+
+
 
