--- a/drainage/public/css/station/station.css
+++ b/drainage/public/css/station/station.css
@@ -62,6 +62,12 @@
     border-color: transparent;
 }
 
+.pagination > .disabled > span {
+    color: #2c3e50;
+    background-color: #ffffff;
+    border: 1px solid #ecf0f1;
+}
+
 .btn-custom {
     padding: 10px 40px;
 }
