--- a/drainage/public/css/station/station.css
+++ b/drainage/public/css/station/station.css
@@ -68,6 +68,18 @@
     border: 1px solid #ecf0f1;
 }
 
+.pagination > .disabled > span,
+.pagination > .disabled > span:hover,
+.pagination > .disabled > span:focus,
+.pagination > .disabled > a,
+.pagination > .disabled > a:hover,
+.pagination > .disabled > a:focus{
+    color: #2c3e50;
+    background-color: #ffffff;
+    border: 1px solid #ecf0f1;
+    cursor: not-allowed;
+}
+
 .btn-custom {
     padding: 10px 40px;
 }
