--- a/drainage/public/css/station/station.css
+++ b/drainage/public/css/station/station.css
@@ -62,11 +62,11 @@
     border-color: transparent;
 }
 
-.pagination > .disabled > span {
-    color: #2c3e50;
-    background-color: #ffffff;
-    border: 1px solid #ecf0f1;
-}
+/*.pagination > .disabled > span {*/
+    /*color: #2c3e50;*/
+    /*background-color: #ffffff;*/
+    /*border: 1px solid #ecf0f1;*/
+/*}*/
 
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
