--- a/drainage/public/css/weather/weather.css
+++ b/drainage/public/css/weather/weather.css
@@ -12,7 +12,7 @@
     font-weight: bold;
 }
 
-.panel-body .now-line {
+.now-line {
     padding-top: 10px;
     padding-bottom: 10px;
     float: left;
