--- a/drainage/public/css/weather/weather.css
+++ b/drainage/public/css/weather/weather.css
@@ -13,17 +13,10 @@
 }
 
 .now-line {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    float: left;
-    height: 1px;
+    margin: 0px 20px;
     border-top: 1px solid #0f0f0f;
 }
 
-.content-daily {
-    display:block;
-    float: left;
-}
 
 
 
