update html code

--- a/drainage/public/css/weather/weather.css
+++ b/drainage/public/css/weather/weather.css
@@ -17,6 +17,14 @@
     border-top: 1px solid #0f0f0f;
 }
 
+.content-now {
+    width: 30%;
+    float: left;
+}
+
+.weather-daily {
+    text-align: center;
+}
 
 
 
