--- a/drainage/public/css/weather/weather.css
+++ b/drainage/public/css/weather/weather.css
@@ -2,6 +2,8 @@
 
 .custom-panel {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .08);
+    color: #ffffff;
+    background-color: #0f0f0f;
 }
 
 .panel-heading .row {
@@ -17,7 +19,7 @@
 
 .now-line {
     margin: 0px 20px;
-    border-top: 1px solid #0f0f0f;
+    border-top: 1px solid #e6e6e6;
 }
 
 .weather-now {
@@ -46,6 +48,12 @@
 .content-daily {
     margin: 20px 0px;
     font-size: 18px;
+}
+
+.daily-line {
+    float: left;
+    width: 1px;
+    border-left: 1px solid #e6e6e6;
 }
 
 
