--- a/drainage/public/css/weather/weather.css
+++ b/drainage/public/css/weather/weather.css
@@ -3,7 +3,7 @@
 .custom-panel {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .08);
     color: #ffffff;
-    background-color: #0f0f0f;
+    background-color: #2c3e50;
 }
 
 .panel-heading .row {
@@ -14,19 +14,24 @@
     font-weight: bold;
 }
 
+.btn-link{
+    float: right;
+    margin-left: 10px;
+}
+
 .text-city {
-    font-size: 28px;
+    font-size: 20px;
 }
 
 .text-updatetime {
-    font-size: 12px;
-    color: hsla(0,0%,100%,.6);
+    font-size: 16px;
+    color: hsla(0,0%,100%,.5);
 }
 
 .now-line {
     margin: 20px 0px;
     border-top: 1px solid;
-    border-color: hsla(0,0%,100%,.3);
+    border-color: hsla(0,0%,100%,.5);
 }
 
 .weather-now {
@@ -66,7 +71,7 @@
     margin: 20px 0px;
 }
 .daily-date {
-    color: hsla(0,0%,100%,.6);
+    color: hsla(0,0%,100%,.5);
 }
 
 
