--- a/drainage/public/css/weather/weather.css
+++ b/drainage/public/css/weather/weather.css
@@ -3,7 +3,8 @@
 .custom-panel {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .08);
     color: #ffffff;
-    background-color: #2c3e50;
+    /*background-color: #2c3e50;*/
+    background: linear-gradient(#1a242f,#2c3e50);
 }
 
 .panel-heading .row {
@@ -29,7 +30,7 @@
 }
 
 .now-line {
-    margin: 20px 0px;
+    margin: 20px 20px;
     border-top: 1px solid;
     border-color: hsla(0,0%,100%,.5);
 }
