--- a/drainage/public/css/weather/weather.css
+++ b/drainage/public/css/weather/weather.css
@@ -4,7 +4,16 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .08);
     color: #ffffff;
     /*background-color: #2c3e50;*/
-    background: linear-gradient(#1a242f,#2c3e50);
+
+    /*!*多云*!*/
+    /*background: linear-gradient(#6f7c85,#919b9f);*/
+    /*!*晴天*!*/
+    /*background: linear-gradient(#2869e9,#79bfff);*/
+    /*!*下雨*!*/
+    /*background: linear-gradient(#566b6e,#7d939b);*/
+
+    /*!*default*!*/
+    /*background: linear-gradient(#1a242f,#2c3e50);*/
 }
 
 .panel-heading .row {
