update html code

--- a/drainage/public/css/weather/weather.css
+++ b/drainage/public/css/weather/weather.css
@@ -10,7 +10,7 @@
     /*!*晴天*!*/
     /*background: linear-gradient(#2869e9,#79bfff);*/
     /*!*下雨*!*/
-    /*background: linear-gradient(#566b6e,#7d939b);*/
+    /*background: linear-gradient(#1a242f,#7d939b);*/
 
     /*!*default*!*/
     /*background: linear-gradient(#1a242f,#2c3e50);*/
