--- a/drainage/public/css/weather/weather.css
+++ b/drainage/public/css/weather/weather.css
@@ -6,7 +6,7 @@
     /*background-color: #2c3e50;*/
 
     /*!*多云*!*/
-    /*background: linear-gradient(#6f7c85,#919b9f);*/
+    /*background: linear-gradient(#2c3e50,#919b9f);*/
     /*!*晴天*!*/
     /*background: linear-gradient(#2869e9,#79bfff);*/
     /*!*下雨*!*/
