--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -1,7 +1,7 @@
 .navbar-custom {
-    background-color: #2c3e50;
+    /*background-color: #2c3e50;*/
     /*background-color: #18bc9c;*/
-    /*background-color: #1296db;*/
+    background-color: #1296db;
     border-color: transparent;
 }
 
