--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -1,8 +1,8 @@
 .navbar-custom {
     /*background-color: #2c3e50;*/
     /*background-color: #18bc9c;*/
-    background-color: #1296db;
-    border-color: transparent;
+    /*background-color: #1296db;*/
+    /*border-color: transparent;*/
 }
 
 
