--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -1,4 +1,4 @@
-.navbar {
+.navbar-default {
     /*background-color: #2c3e50;*/
     /*background-color: #18bc9c;*/
     background-color: #1296db;
