update runDetail code

--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -55,5 +55,14 @@
     display: block;
 }
 
+#dateStr {
+    margin: 0px 10px;
+    padding-top: 19.5px;
+    padding-bottom: 19.5px;
+    color: #ffffff;
+    float: left;
+    display: block;
+}
+
 
 
