--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -1,5 +1,4 @@
 
-
 .custom-panel {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .08);
 }
@@ -14,7 +13,7 @@
 }
 
 .main-menu > li {
-    display:block;
+    display: block;
     border: 1px solid #ecf0f1;
     width: 25%;
     text-align: center;
@@ -23,21 +22,22 @@
 
 .menu-item {
     color: #2c3e50;
-    display:block;
+    display: block;
     width: 100%;
     height: 100%;
 }
 
 .menu-item:hover, .menu-item:focus {
     text-decoration: none;
-    color: #18bc9c;
+    /*color: #18bc9c;*/
+    font-size: 25px;
     cursor: pointer;
-    box-shadow: 0 0 26px rgba(0,0,0,.08) inset;
+    box-shadow: 0 0 26px rgba(0, 0, 0, .08) inset;
     -webkit-transition: all .15s ease;
     transition: all .15s ease;
 }
 
-.menu-item >h4 {
+.menu-item > h4 {
     margin-top: 25px;
     margin-bottom: 40px;
 }
@@ -47,5 +47,11 @@
     width: 70px;
     height: 70px;
     margin-top: 40px;
+    -webkit-transition: all .15s ease;
+    transition: all .15s ease;
+}
+
+.menu-icon:hover {
+    transform: scale(1.2);
 }
 
