--- a/drainage/public/css/common/home.css
+++ b/drainage/public/css/common/home.css
@@ -31,7 +31,7 @@
     text-decoration: none;
     /*color: #18bc9c;*/
     color: #2c3e50;
-    background-color: #e3e3e3;
+    background-color: #fdfdfd;
     cursor: pointer;
     box-shadow: 0 0 26px rgba(0, 0, 0, .08) inset;
     -webkit-transition: all .15s ease;
