--- a/drainage/public/css/station/station.css
+++ b/drainage/public/css/station/station.css
@@ -78,6 +78,11 @@
     border-top: 1px solid transparent;
 }
 
+.container-sm {
+    width: 1120px;
+    margin: 0 auto;
+}
+
 .location h2 {
     margin: 0;
     text-indent: 20px;
@@ -89,6 +94,10 @@
     top: 3px;
     position: relative;
     float: left;
+}
+
+.location h2 a:link, .location h2 a:visited {
+    color: #757575;
 }
 
 .location h2 em {
