--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -66,19 +66,22 @@
 
 .location
 {
-    height: 41px;
-    border-top: 1px solid transparent;
+    height: 50px;
+    /* border-top: 1px solid transparent; */
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, .08);
+    margin-top: -18px;
+    margin-bottom: 10px;
 }
 
 .location h2 {
     margin: 0;
     text-indent: 20px;
     line-height: 36px;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 400;
     color: #757575;
     background: url(../..//img/header/home_sm.png) left center no-repeat;
-    top: 3px;
+    top: 6px;
     position: relative;
     float: left;
 }
