--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -94,6 +94,12 @@
     margin: 0 4px;
 }
 
+html,body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    background-size: cover;
+}
 
 
 
