--- a/drainage/public/css/common/login.css
+++ b/drainage/public/css/common/login.css
@@ -11,7 +11,7 @@ body {
 }
 
 .custom-panel {
-    box-shadow: 0px 20px 30px rgba(0, 0, 0, .58);
+    box-shadow: 0px 20px 20px rgba(0, 0, 0, .38);
 }
 
 .panel-heading .row {
@@ -28,6 +28,10 @@ body {
 
 .panel-heading .btn-link{
     float: right;
+}
+
+.panel-body {
+    padding-top: 30px;
 }
 
 .btn-custom {
