--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -92,10 +92,11 @@
     margin: 0 4px;
 }
 
-html,body {
+body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
+    background: url(../..//img/back-1.png) center center repeat;
     background-size: cover;
 }
 
