--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -96,6 +96,7 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
+    font-family: PingFang SC,Microsoft YaHei UI,STHeitiSC-Light,Microsoft YaHei;
 }
 
 
