--- a/drainage/public/css/common/login.css
+++ b/drainage/public/css/common/login.css
@@ -7,7 +7,8 @@ body {
 }
 
 .navbar-default {
-    background: transparent;
+    background: rgba(255, 255, 255, 0.15);
+    /*background: transparent;*/
 }
 
 .custom-panel {
