--- a/drainage/public/css/common/login.css
+++ b/drainage/public/css/common/login.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    background: url(../..//img/back-water.jpeg) center center no-repeat;;
+    background: url(../..//img/back-water.jpeg) center center no-repeat;
     background-size: cover;
 }
 
