--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -1,6 +1,11 @@
 .navbar-default {
     /*style="background-color: #1296db;"*/
-    background-color: #1296db;
+    /*background-color: #1296db;*/
+
+    background-image: -webkit-linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
+    background-image: -o-linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#54b4eb), color-stop(60%, #2fa4e7), to(#1d9ce5));
+    background-image: linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
 }
 
 .navbar-brand {
