--- a/drainage/public/css/common/login.css
+++ b/drainage/public/css/common/login.css
@@ -6,6 +6,12 @@ body {
     background-size: cover;
 }
 
+#app {
+    background: rgba(255, 255, 255, 0.15);
+    width:100vh;
+    height:100vh;
+}
+
 .navbar-default {
     background: rgba(255, 255, 255, 0.0);
     /*background: transparent;*/
