--- a/drainage/public/css/common/login.css
+++ b/drainage/public/css/common/login.css
@@ -13,6 +13,20 @@ body {
     height: 100%;
 }
 
+.brand {
+    margin-top: 2px;
+    padding: 12px 15px;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+}
+
+.logo {
+    display: inline;
+    margin: 0 10px;
+    height: 100%;
+}
+
 .navbar-default {
     background: rgba(255, 255, 255, 0.0);
     /*background: transparent;*/
