--- a/drainage/public/css/pace/themes/blue/pace-theme-flash.css
+++ b/drainage/public/css/pace/themes/blue/pace-theme-flash.css
@@ -12,7 +12,7 @@
 }
 
 .pace .pace-progress {
-  background: #2299dd;
+  background: #2c3e50;
   position: fixed;
   z-index: 2000;
   top: 0;
@@ -27,7 +27,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #2299dd, 0 0 5px #2299dd;
+  box-shadow: 0 0 10px #2c3e50, 0 0 5px #2c3e50;
   opacity: 1.0;
   -webkit-transform: rotate(3deg) translate(0px, -4px);
   -moz-transform: rotate(3deg) translate(0px, -4px);
@@ -45,8 +45,8 @@
   width: 14px;
   height: 14px;
   border: solid 2px transparent;
-  border-top-color: #2299dd;
-  border-left-color: #2299dd;
+  border-top-color: #2c3e50;
+  border-left-color: #2c3e50;
   border-radius: 10px;
   -webkit-animation: pace-spinner 400ms linear infinite;
   -moz-animation: pace-spinner 400ms linear infinite;
