--- a/drainage/public/css/report/report.css
+++ b/drainage/public/css/report/report.css
@@ -23,7 +23,7 @@
 .table {
     margin-bottom: 20px;
     word-break: break-all;
-    table-layout: fixed;
+    /*table-layout: fixed;*/
 }
 
 .table th {
