--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -10,12 +10,17 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .10);
 }
 
+.navbar-default .navbar-nav > li > a {
+    color: #3498db;
+}
+
 .navbar-brand {
     margin-top: 2px;
     padding: 12px 15px;
     display: block;
     text-align: center;
     font-size: 20px;
+    color: #3498db;
 }
 
 .navbar-brand > img {
