--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -15,7 +15,8 @@
     padding: 12px 15px;
     display: block;
     text-align: center;
-    font-size: 20px;
+    font-size: 22px;
+    font-family: 'Heiti SC';
     color: #3498db;
 }
 
