--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -15,13 +15,13 @@
     padding: 12px 15px;
     display: block;
     text-align: center;
-    font-size: 22px;
+    font-size: 24px;
     font-weight: bold;
     font-family: 'Heiti SC';
     color: #3498db;
 }
 
-.navbar-nav > li > a {
+.navbar-default .navbar-nav > li > a {
     color: #3498db;
 }
 
