--- a/drainage/public/css/common/header.css
+++ b/drainage/public/css/common/header.css
@@ -106,6 +106,7 @@
 
 body {
     margin: 0;
+    margin-top: 90px;
     padding: 0;
     min-height: 100vh;
     font-family: PingFang SC, Microsoft YaHei UI, STHeitiSC-Light, Microsoft YaHei;
